--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-cache": "^5.1.2",
-    "yahoo-finance2": "^2.11.3"
+    "yahoo-finance2": "2.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
